# tipeo-nada

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindSDL2_mixer.cmake
src/: constants.cpp  main.cpp
src/Assets/: words.txt
src/Audio/: Audio.cpp
src/Button/: Button.cpp  Button.hpp
src/Font/: Font.cpp
src/Game/: Game.cpp  Game.hpp
src/Graphics/: Graphics.cpp
src/Player/: Player.cpp  Player.hpp
